# flask-tutorial-package

./: .gitignore  Procfile  README.md  config.py  pyproject.toml  requirements.txt  run.py
instance/: config.py
mainapp/: __init__.py  models.py  utils.py  views.py  worker.py
mainapp/static/styles/: style.css
mainapp/templates/: form.html  index.html  layout.html  testing.html
